--- a/FlightSearchSimulator/FlightSearchSimulator.csproj
+++ b/FlightSearchSimulator/FlightSearchSimulator.csproj
@@ -186,6 +186,12 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FlightSearchResources\FlightSearchResources.csproj">
+      <Project>{8cdf27d8-5039-4e40-9c64-6a28a7bc5807}</Project>
+      <Name>FlightSearchResources</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
