--- a/FlightSearchSimulator/FlightSearchSimulator.csproj
+++ b/FlightSearchSimulator/FlightSearchSimulator.csproj
@@ -135,10 +135,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IFlightSearchRepository.cs" />
     <Compile Include="Models\Provider.cs" />
     <Compile Include="Models\SearchRequest.cs" />
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\FlightSearchRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
