--- a/FlightSearchSimulator/FlightSearchSimulator.csproj
+++ b/FlightSearchSimulator/FlightSearchSimulator.csproj
@@ -135,6 +135,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Helper.cs" />
+    <Compile Include="Helpers\IHelper.cs" />
     <Compile Include="Interfaces\IFlightSearchRepository.cs" />
     <Compile Include="Models\Provider.cs" />
     <Compile Include="Models\SearchRequest.cs" />
